# shop-aggregator

./: .gitignore  Makefile  README.md  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: CI.yml
honduras_shop_aggregator/: asgi.py  context_processors.py  image_utils.py  settings.py  urls.py  utils.py  views.py  wsgi.py
honduras_shop_aggregator/categories/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
honduras_shop_aggregator/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
honduras_shop_aggregator/cities/: admin.py  apps.py  models.py  tests.py
honduras_shop_aggregator/cities/migrations/: 0001_initial.py
honduras_shop_aggregator/fixtures/: categories.json  cities.json  products.json  products_test_data.json  sellers.json  sellers_test_data.json  users.json  users_test_data.json
honduras_shop_aggregator/likedproducts/: __init__.py  admin.py  apps.py  models.py  signals.py  tests.py  views.py
honduras_shop_aggregator/likedproducts/migrations/: 0001_initial.py
honduras_shop_aggregator/products/: admin.py  apps.py  filters.py  forms.py  models.py  test_filters.py  tests.py  urls.py  views.py
honduras_shop_aggregator/products/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_product_link.py  0004_product_category.py  0013_productimage.py  (+8 more)
honduras_shop_aggregator/sellers/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
honduras_shop_aggregator/templates/: 404.html
honduras_shop_aggregator/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+39 files in other folders)
