[project]
name = "honduras-shop-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
packages = [
    {include = "honduras_shop_aggregator"}
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
