[project]
name = "honduras-shop-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
packages = [
    {include = "honduras_shop_aggregator"}
]
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-bootstrap5>=25.1",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
