[project]
name = "honduras-shop-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
packages = [
    {include = "honduras_shop_aggregator"}
]
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-bootstrap5>=25.1",
    "django-crispy-forms>=2.3",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "ruff>=0.9.9",
]

[tool.ruff]
lint.select = ["E", "F"]
exclude = ["*/migrations/*"]
